[gd_scene load_steps=6 format=3 uid="uid://ddtm7e5xfx0ah"]

[ext_resource type="Script" path="res://scripts/gameplay/platforming/spring.gd" id="1_l1j8u"]
[ext_resource type="AudioStream" uid="uid://cscalyoxi2pkg" path="res://audio/sfx/spring.ogg" id="2_st6ay"]
[ext_resource type="PackedScene" uid="uid://d2rry2ai4es1" path="res://geometry/medieval/medieval_spring.tscn" id="4_7fflq"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_bxpmg"]
height = 1.3
radius = 0.6

[sub_resource type="CylinderShape3D" id="CylinderShape3D_cx3e6"]
height = 0.25
radius = 0.6

[node name="Spring" type="StaticBody3D"]
script = ExtResource("1_l1j8u")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.65, 0)
shape = SubResource("CylinderShape3D_bxpmg")

[node name="TriggerArea" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="TriggerArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.46238, 0)
shape = SubResource("CylinderShape3D_cx3e6")

[node name="SpringSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_st6ay")

[node name="MedievalSpring" parent="." instance=ExtResource("4_7fflq")]

[connection signal="body_entered" from="TriggerArea" to="." method="_trigger_area_body_entered"]
[connection signal="body_exited" from="TriggerArea" to="." method="_trigger_area_body_exited"]
